ffmpeg addon: only use swresample for planar audio.

Fixes #12547.